RESOLVED FIXED122652
COLLECT_ON_EVERY_ALLOCATION causes assertion failures
https://bugs.webkit.org/show_bug.cgi?id=122652
Summary COLLECT_ON_EVERY_ALLOCATION causes assertion failures
Mark Hahnenberg
Reported 2013-10-11 09:53:44 PDT
Due to the addition of the GC deferral mechanism, COLLECT_ON_EVERY_ALLOCATION can cause us to force collection even when we've deferred collection.
Attachments
Patch (1.38 KB, patch)
2013-10-14 14:07 PDT, Mark Hahnenberg
no flags
Mark Hahnenberg
Comment 1 2013-10-11 09:54:51 PDT
(In reply to comment #0) > Due to the addition of the GC deferral mechanism, COLLECT_ON_EVERY_ALLOCATION can cause us to force collection even when we've deferred collection. Kind of an odd way to phrase it, but you get the idea.
Mark Hahnenberg
Comment 2 2013-10-14 14:07:04 PDT
WebKit Commit Bot
Comment 3 2013-10-14 14:39:38 PDT
Comment on attachment 214186 [details] Patch Clearing flags on attachment: 214186 Committed r157422: <http://trac.webkit.org/changeset/157422>
WebKit Commit Bot
Comment 4 2013-10-14 14:39:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.