COLLECT_ON_EVERY_ALLOCATION causes assertion failures https://bugs.webkit.org/show_bug.cgi?id=122652

Reviewed by Filip Pizlo.

COLLECT_ON_EVERY_ALLOCATION wasn't accounting for the new GC deferral mechanism,
so we would end up ASSERTing during garbage collection.

* heap/MarkedAllocator.cpp:
(JSC::MarkedAllocator::allocateSlowCase):


Canonical link: https://commits.webkit.org/140891@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157422 268f45cc-cd09-0410-ab3c-d52691b4dbfc